fix broken layout
> cool urls never break

--- a/assets/css/screen.scss
+++ b/assets/css/screen.scss
@@ -144,13 +144,3 @@
 .article-why-amd {
   background: #1E2733;
 }
-
-.disqus-wrap {
-  text-align: center;
-  padding: 40px 0 70px;
-  background: #efefef;
-}
-#disqus_thread {
-  margin: 0 auto;
-  width: 690px;
-}
